# cmake_play

./: README.md  docker-compose.yml
centos_7/: Dockerfile
gtest_code/: test.cpp
gtest_code/src/: exmaple.cpp
src/: CMakeLists.txt  CMakeLists.txt.in  factorial.cpp  goodmorning.cpp  main.cpp  test_factorial.cpp
src/src/: factorial.cpp
src/test/: test_factorial.cpp
ubuntu_20_04/: Dockerfile
